; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_vdpau_mixer.c_mp_vdpau_mixer_destroy.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_vdpau_mixer.c_mp_vdpau_mixer_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_vdpau_mixer = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.vdp_functions }
%struct.vdp_functions = type { i32 (i64)* }

@VDP_INVALID_HANDLE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [43 x i8] c"Error when calling vdp_video_mixer_destroy\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_vdpau_mixer_destroy(%struct.mp_vdpau_mixer* %0) #0 {
  %2 = alloca %struct.mp_vdpau_mixer*, align 8
  %3 = alloca %struct.vdp_functions*, align 8
  %4 = alloca i32, align 4
  store %struct.mp_vdpau_mixer* %0, %struct.mp_vdpau_mixer** %2, align 8
  %5 = load %struct.mp_vdpau_mixer*, %struct.mp_vdpau_mixer** %2, align 8
  %6 = getelementptr inbounds %struct.mp_vdpau_mixer, %struct.mp_vdpau_mixer* %5, i32 0, i32 1
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  store %struct.vdp_functions* %8, %struct.vdp_functions** %3, align 8
  %9 = load %struct.mp_vdpau_mixer*, %struct.mp_vdpau_mixer** %2, align 8
  %10 = getelementptr inbounds %struct.mp_vdpau_mixer, %struct.mp_vdpau_mixer* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @VDP_INVALID_HANDLE, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %24

14:                                               ; preds = %1
  %15 = load %struct.vdp_functions*, %struct.vdp_functions** %3, align 8
  %16 = getelementptr inbounds %struct.vdp_functions, %struct.vdp_functions* %15, i32 0, i32 0
  %17 = load i32 (i64)*, i32 (i64)** %16, align 8
  %18 = load %struct.mp_vdpau_mixer*, %struct.mp_vdpau_mixer** %2, align 8
  %19 = getelementptr inbounds %struct.mp_vdpau_mixer, %struct.mp_vdpau_mixer* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = call i32 %17(i64 %20)
  store i32 %21, i32* %4, align 4
  %22 = load %struct.mp_vdpau_mixer*, %struct.mp_vdpau_mixer** %2, align 8
  %23 = call i32 @CHECK_VDP_WARNING(%struct.mp_vdpau_mixer* %22, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  br label %24

24:                                               ; preds = %14, %1
  %25 = load %struct.mp_vdpau_mixer*, %struct.mp_vdpau_mixer** %2, align 8
  %26 = call i32 @talloc_free(%struct.mp_vdpau_mixer* %25)
  ret void
}

declare dso_local i32 @CHECK_VDP_WARNING(%struct.mp_vdpau_mixer*, i8*) #1

declare dso_local i32 @talloc_free(%struct.mp_vdpau_mixer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
